sumo/tests/sumo/output/vtypeprobe/errors/freq_missing/errors.sumo
Error: Attribute 'freq' is missing in definition of vtypeprobe 'test1'.
Quitting (on error).
